--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -737,3 +737,122 @@ nav.navbar {
 }
 
 /* Testimonial Section CSS End */
+
+/* ===============***================
+Coming Soon Page CSS
+===============***================ */
+
+.coming-soon-header-wrapper {
+  padding-top: 65px;
+}
+
+.comming-soon-container {
+  position: relative;
+  max-width: 600px;
+  margin: auto;
+  padding: 180px 0;
+  text-align: center;
+}
+
+.comming-soon-container::before {
+  position: absolute;
+  content: "";
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 400px;
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(
+    126.73deg,
+    rgba(245, 74, 74, 0.1248) 32.62%,
+    rgba(255, 239, 98, 0.1248) 73.92%
+  );
+  filter: blur(70px);
+  z-index: -2;
+}
+
+.comming-soon-container::after {
+  position: absolute;
+  content: "";
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 800px;
+  width: 100%;
+  height: 800px;
+  background: linear-gradient(
+    126.73deg,
+    rgba(245, 74, 74, 0.3432) 32.62%,
+    rgba(255, 239, 98, 0.3432) 73.92%
+  );
+  filter: blur(150px);
+  z-index: -1;
+}
+
+.coming-soon-content h2 {
+  position: relative;
+  font-size: 56px;
+  font-weight: 600;
+  line-height: 67px;
+  color: #f54a4a;
+  padding-bottom: 50px;
+}
+
+.cst-line {
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+}
+
+.coming-soon-content h3 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 38px;
+  color: #120f0f;
+}
+
+.coming-soon-form {
+  padding-top: 40px;
+}
+
+.form-input-filed {
+  max-width: 80%;
+  width: 100%;
+}
+
+.form-input-filed input {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.3);
+  padding: 12px 24px;
+  border: 1px solid #f54a4a;
+  border-radius: 64px;
+}
+
+.form-input-filed input:focus {
+  outline: 0;
+}
+
+.form-btn-filed {
+  max-width: 17%;
+  width: 100%;
+}
+
+.form-btn-filed input {
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #f9f8f8;
+  background: #f54a4a;
+  padding: 14px;
+  border: none;
+  border-radius: 100px;
+}
+
+.coming-soon-form ::placeholder {
+  font-size: 16px;
+  font-weight: 600;
+  color: #f99999;
+}
